# Dumb

./: Dockerfile  Makefile  README.md  dumb.cabal  script.sh
src/: Main.hs
wordlists/: domain-endings.txt  pt-subdomain.lst
