name:                dumb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dumb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dumb
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2 --make -static -optc-static -optl-static -optl-pthread
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       dns,
                       bytestring,
                       either-unwrap,
                       parallel,
                       monad-parallel,
                       text
